--- a/app/components/blinds-page/blinds-page.html
+++ b/app/components/blinds-page/blinds-page.html
@@ -5,76 +5,43 @@
       <h2 class="mb-0" data-ch5-textcontent="Room.NameOfRoom">Great Room</h2>
     </div>
   </div>
-  <hr />
-  <!-- show vertical list when below large -->
-  <div
-    class="blinds-list-container d-flex d-lg-none justify-content-center align-items-center"
-  >
-    <ch5-list size="3" orientation="vertical">
-      <template>
-        <div class="slider-container container">
-          <ch5-slider min="0" max="100" receivestatevalue="receive_blind_value">
-          </ch5-slider>
-        </div>
-        <div class="flex justify-content-center">
-          <ch5-button
-            id="open_blind"
-            label="Open"
-            shape="circle"
-            sendeventonclick="open_blind"
-          >
-          </ch5-button>
-          <ch5-button
-            id="stop_blind"
-            label="Stop"
-            shape="circle"
-            sendeventonclick="stop_blind"
-          >
-          </ch5-button>
-          <ch5-button
-            id="close_blind"
-            label="Close"
-            shape="circle"
-            sendeventonclick="close_blind"
-          >
-          </ch5-button>
+  <div class="blackout-shades-btn">
+    <ch5-button
+      selected
+      id="shades-btn"
+      label="Shades"
+      size="large"
+      shape="rectangle"
+      sendeventonclick="trig_shades"
+      receiveStateSelected="show_shades"
+    >
+    </ch5-button>
+    <ch5-button
+      id="blackout-btn"
+      label="Blackout"
+      size="large"
+      shape="rectangle"
+      sendeventonclick="trig_blackout"
+      receiveStateSelected="show_blackout"
+    >
+    </ch5-button>
+  </div>
 
-      </template>
-    </ch5-list>
-  </div>
-  <div
-    class="blinds-list-container d-lg-flex d-none justify-content-center align-items-center"
-  >
-    <ch5-list size="6" orientation="horizontal">
-      <template>
-        <div class="slider-container container">
-          <ch5-slider min="0" max="100" receivestatevalue="receive_blind_value">
-          </ch5-slider>
-        </div>
-        <div class="flex justify-content-center">
-          <ch5-button
-            id="open_blind"
-            label="Open"
-            shape="circle"
-            sendeventonclick="open_blind"
-          >
-          </ch5-button>
-          <ch5-button
-            id="stop_blind"
-            label="Stop"
-            shape="circle"
-            sendeventonclick="stop_blind"
-          >
-          </ch5-button>
-          <ch5-button
-            id="close_blind"
-            label="Close"
-            shape="circle"
-            sendeventonclick="close_blind"
-          >
-          </ch5-button>
-        </div>
-      </template>
-    </ch5-list>
-  </div>
+  <hr />
+  <ch5-triggerview activeview="0">
+    <ch5-triggerview-child receivestateshow="show_shades">
+      <ch5-import-htmlsnippet
+        url="./components/shades/shades.html"
+        class="shades-templ"
+      >
+      </ch5-import-htmlsnippet>
+    </ch5-triggerview-child>
+    <ch5-triggerview-child receivestateshow="show_blackout">
+      <ch5-import-htmlsnippet
+        url="./components/blackout/blackout.html"
+        class="blackout-templ"
+      >
+      </ch5-import-htmlsnippet>
+    </ch5-triggerview-child>
+  </ch5-triggerview>
 </section>
