--- a/app/assets/scss/themes/_dark-theme.scss
+++ b/app/assets/scss/themes/_dark-theme.scss
@@ -322,6 +322,32 @@ $ch5-dark-gradient-buttons: map-merge(
       background-color: rgba(#343a40, 0.9);
     }
   }
+  // blinds page
+  .blinds-page {
+    span.window-label {
+      color: rgba(255, 255, 255, 0.699);
+    }
+    .ch5-button {
+      background-color: $ch5-lighting-btn-dark;
+      border: none !important;
+    }
+    .blackout-shades-btn {
+      .ch5-button {
+        background-color: transparent;
+        border: none;
+        box-shadow: 0px 0px 4px 2px rgb(156, 156, 156);
+        color: rgba(255, 255, 255, 0.74);
+      }
+      .ch5-button.ch5-button--selected {
+        background-color: $ch5-lighting-btn-dark;
+        box-shadow: 0 1px 1px rgb(102, 102, 102);
+        transform: translateY(1.5px);
+
+        border: none;
+        color: rgb(255, 255, 255);
+      }
+    }
+  }
 
   // lighting page
   // ch5 list
@@ -350,6 +376,14 @@ $ch5-dark-gradient-buttons: map-merge(
   .climate-page {
     .ch5-button {
       background-color: $ch5-lighting-btn-dark;
+      box-shadow: 0px 0px 4px 2px rgb(156, 156, 156);
+      // border: solid 1px rgb(156, 156, 156);
+    }
+    .ch5-button--pressed {
+      box-shadow: 0 1px 1px rgb(102, 102, 102);
+      // border: none;
+
+      transform: translateY(1.5px);
     }
     #on-btn {
       .ch5-button--default {
@@ -357,7 +391,7 @@ $ch5-dark-gradient-buttons: map-merge(
         opacity: 1;
       }
       .ch5-button--pressed {
-        background-color: rgb(59, 126, 60);
+        background-color: rgb(48, 104, 49);
       }
       // .ch5-button--selected {
       //   background-color: rgb(73, 100, 73);
@@ -369,12 +403,13 @@ $ch5-dark-gradient-buttons: map-merge(
         opacity: 1;
       }
       .ch5-button--pressed {
-        background-color: rgb(126, 60, 60);
+        background-color: rgb(105, 51, 51);
       }
     }
     .temp-container {
       border-color: #4f798b;
       background-color: #203138;
+      box-shadow: inset 10px -7px 20px rgba(110, 110, 110, 0.6);
     }
   }
 
