--- a/app/assets/scss/themes/_light-theme.scss
+++ b/app/assets/scss/themes/_light-theme.scss
@@ -300,6 +300,40 @@ $ch5-light-gradient-buttons: map-merge(
     }
   }
 
+  // blinds page / shades/ blackout
+  .blinds-page {
+    .ch5-button {
+      background-color: $ch5-lighting-btn-light;
+    }
+    .blackout-shades-btn {
+      .ch5-button {
+        background-color: transparent;
+        border: none;
+        color: rgba(59, 59, 59, 0.966);
+        box-shadow: 3px 3px 7px rgb(48, 48, 48);
+      }
+      .ch5-button.ch5-button--selected {
+        background-color: $ch5-lighting-btn-light;
+
+        border: none;
+        color: rgb(255, 255, 255);
+        box-shadow: 1px 1px 3px rgb(58, 57, 57);
+        transform: translateY(3px);
+        opacity: 1;
+      }
+    }
+  }
+  .shades {
+    .open-close-btn {
+      .ch5-button {
+        // box-shadow: inset 0px 0px 14px 10px rgba(59, 59, 59, 0.726);
+        border: none;
+        // box-sizing: border-box !important;
+        // border: 2px solid rgb(56, 53, 53);
+      }
+    }
+  }
+
   // lighting page
   // ch5 list
   ch5-list.ch5-custom-list.dim {
@@ -352,8 +386,17 @@ $ch5-light-gradient-buttons: map-merge(
 
   // climate page
   .climate-page {
+    .mode-buttons-container,
+    .fan-buttons-container {
+      box-shadow: inset 3px -4px 10px rgba(68, 68, 68, 0.6);
+    }
     .ch5-button {
       background-color: $ch5-lighting-btn-light;
+      box-shadow: 3px 3px 7px rgb(70, 70, 70);
+    }
+    .ch5-button--pressed {
+      box-shadow: 1px 1px 3px rgb(58, 57, 57);
+      transform: translateY(3px);
     }
     #on-btn {
       .ch5-button--default {
@@ -361,7 +404,7 @@ $ch5-light-gradient-buttons: map-merge(
         opacity: 0.9;
       }
       .ch5-button--pressed {
-        background-color: rgb(57, 124, 59);
+        background-color: rgb(48, 105, 50);
       }
       // .ch5-button--selected {
       //   background-color: rgb(73, 100, 73);
@@ -373,12 +416,13 @@ $ch5-light-gradient-buttons: map-merge(
         opacity: 0.9;
       }
       .ch5-button--pressed {
-        background-color: rgb(126, 60, 60);
+        background-color: rgb(105, 50, 50);
       }
     }
     .temp-container {
       border-color: #2d444e;
       background-color: #6092a8;
+      box-shadow: inset 10px -7px 20px rgba(41, 41, 41, 0.6);
     }
   }
 
