--- a/app/components/blinds-page/blinds-page.html
+++ b/app/components/blinds-page/blinds-page.html
@@ -7,7 +7,7 @@
   </div>
   <div class="blackout-shades-btn">
     <ch5-button
-      selected
+      selected="false"
       id="shades-btn"
       label="Shades"
       size="large"
