--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -24,7 +24,7 @@
             id="fan-btn"
             label="Fan"
             stretch="both"
-            shape="rounded-rectangle"
+            shape="rectangle"
             sendeventonclick=""
           >
           </ch5-button>
@@ -32,13 +32,14 @@
             id="auto-btn"
             label="Auto"
             stretch="both"
-            shape="rounded-rectangle"
+            shape="rectangle"
             sendeventonclick=""
           >
           </ch5-button>
         </div>
       </div>
     </div>
+    <!-- ON OFF Buttons -->
     <div
       class="col-6 col-sm-7 on-off-container pl-0 pr-0 d-flex justify-content-center align-items-center"
     >
@@ -73,7 +74,7 @@
           <ch5-button
             id="fan-high-btn"
             label="High"
-            shape="rounded-rectangle"
+            shape="rectangle"
             stretch="both"
             sendeventonclick=""
           >
@@ -82,7 +83,7 @@
           <ch5-button
             id="fan-medium-btn"
             label="Medium"
-            shape="rounded-rectangle"
+            shape="rectangle"
             stretch="both"
             sendeventonclick=""
           >
@@ -90,7 +91,7 @@
           <ch5-button
             id="fan-low-btn"
             label="Low"
-            shape="rounded-rectangle"
+            shape="rectangle"
             stretch="both"
             sendeventonclick=""
           >
@@ -98,7 +99,7 @@
           <ch5-button
             id="fan-off-btn"
             label="Off"
-            shape="rounded-rectangle"
+            shape="rectangle"
             stretch="both"
             sendeventonclick=""
           >
