--- a/app/assets/scss/themes/_dark-theme.scss
+++ b/app/assets/scss/themes/_dark-theme.scss
@@ -329,7 +329,14 @@ $ch5-dark-gradient-buttons: map-merge(
     }
     .ch5-button {
       background-color: $ch5-lighting-btn-dark;
-      border: none !important;
+      box-shadow: 0px 0px 4px 2px rgb(156, 156, 156);
+      // border: none;
+    }
+    .ch5-button--pressed {
+      box-shadow: 0 1px 1px rgb(102, 102, 102);
+      // border: none;
+
+      transform: translateY(1.5px);
     }
     .blackout-shades-btn {
       .ch5-button {
@@ -377,7 +384,7 @@ $ch5-dark-gradient-buttons: map-merge(
     .ch5-button {
       background-color: $ch5-lighting-btn-dark;
       box-shadow: 0px 0px 4px 2px rgb(156, 156, 156);
-      // border: solid 1px rgb(156, 156, 156);
+      // border: none;
     }
     .ch5-button--pressed {
       box-shadow: 0 1px 1px rgb(102, 102, 102);
