Room list emulator commit

--- a/app/components/room-list-templ/room-list-templ.html
+++ b/app/components/room-list-templ/room-list-templ.html
@@ -66,7 +66,7 @@
             orientation="vertical"
             indexId="idx"
            
-            receivestatesize="Floor[0].Room[0].NumberOfRooms"
+            receivestatesize="Floor[0].NumberOfRooms"
             >
 
             <template>
@@ -86,7 +86,7 @@
 
             </ch5-list>
 
-
+<!--            
             
           <div class="col-15">
 
@@ -95,7 +95,7 @@
             orientation="vertical"                 
             orientation="vertical"
             indexId="idx"
-            receivestatesize="Floor[1].Room[0].NumberOfRooms"
+            receivestatesize="Floor[1].NumberOfRooms"
             >
 
             <template>
@@ -117,7 +117,7 @@
         
 
 
-          </div>
+          </div> -->
         
             
 
