--- a/app/components/blinds-page/blinds-page.html
+++ b/app/components/blinds-page/blinds-page.html
@@ -2,7 +2,7 @@
   <div class="navbar-text pl-3">
     <div class="room-info mb-1 pt-3 text-uppercase text-white">
       <span class="d-sm-block">Blinds</span>
-      <h2 class="mb-0" data-ch5-textcontent="Room.NameOfRoom">Great Room</h2>
+      <h2 class="mb-0" data-ch5-textcontent="">Great Room</h2>
     </div>
   </div>
   <div class="blackout-shades-btn">
